--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -1,11 +1,8 @@
-<?python
-  title = "A Genshi Template"
-?>
 <html xmlns:py="http://genshi.edgewall.org/">
   <head>
     <title py:content="title">This is replaced.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
   </head>
   <body>
     <h1>Editing display</h1>
@@ -13,7 +10,7 @@
     <!-- Container of all lines -->
     <h4>Display</h4>
     <div id="editorWidget">
-      <ul id="editorDisplay" class="codeDisplay"></ul>
+      <ul id="editorDisplay" class="codeDisplay" contenteditable="true"></ul>
     </div><br/>
 
     <h4>Last version</h4>
@@ -25,20 +22,26 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- JS -->
-    <script src="static/js.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../static/js.js" type="text/javascript" charset="utf-8"></script>
 
 
 
     <h3>Test</h3>
-    <label>add&nbsp;</label><textarea id="addText"/><br/>
-    <label>at&nbsp;&nbsp;&nbsp;&nbsp;</label><input type="text" id="addAt"/><br/>
+    <label>add</label>
+    <textarea id="addText"></textarea>
+    <br>
+    <label>at</label>
+    <input type="text" id="addAt"/>
+    <br>
     <button onClick="addNewTextAt();">Send</button>
-    <br/><br/>
+    <br>
+    <br>
     <button onClick="test_queue();">Stack modifs</button>
     <button onClick="applyChanges();">Apply modifs</button>
     <button onClick="show_stack();">Show Stack</button>
     <button onClick="update_display();">Update display</button>   
 
+    <br><br><br><br>
 
   </body>
 </html>
