--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -1,8 +1,8 @@
 <html xmlns:py="http://genshi.edgewall.org/">
   <head>
-    <title py:content="title">This is replaced.</title>
+    <title>This is replaced.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
   </head>
   <body>
     <h1>Editing display</h1>
@@ -16,32 +16,26 @@
     <h4>Last version</h4>
     <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
 
-    <h4>Local</h4>
-    <textarea id="editorLocal" class="codeInputDebug"></textarea>
-    
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- JS -->
-    <script src="../static/js.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js.js" type="text/javascript" charset="utf-8"></script>
 
 
 
     <h3>Test</h3>
     <label>add</label>
     <textarea id="addText"></textarea>
-    <br>
+    <br/>
     <label>at</label>
     <input type="text" id="addAt"/>
-    <br>
+    <br/>
     <button onClick="addNewTextAt();">Send</button>
-    <br>
-    <br>
+    <br/>
+    <br/>
     <button onClick="test_queue();">Stack modifs</button>
     <button onClick="applyChanges();">Apply modifs</button>
     <button onClick="show_stack();">Show Stack</button>
     <button onClick="update_display();">Update display</button>   
-
-    <br><br><br><br>
-
   </body>
 </html>
