Handling many modifications received by server and keeping local changes

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -10,8 +10,9 @@
     <!-- Container of all lines -->
     <h4>Display</h4>
     <div id="editorWidget">
-      <ul id="editorDisplay" class="codeDisplay" contenteditable="true"></ul>
-    </div><br/>
+      <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
+    </div>
+    <br/>
 
     <h4>Last version</h4>
     <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
@@ -33,9 +34,6 @@
     <button onClick="addNewTextAt();">Send</button>
     <br/>
     <br/>
-    <button onClick="test_queue();">Stack modifs</button>
-    <button onClick="applyChanges();">Apply modifs</button>
-    <button onClick="show_stack();">Show Stack</button>
-    <button onClick="update_display();">Update display</button>   
+    <button onClick="test_notify();">Test notify</button>
   </body>
 </html>
