Added low communication and basic request sent and received to server

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -35,5 +35,6 @@
     <br/>
     <br/>
     <button onClick="test_notify();">Test notify</button>
+    <button onClick="test_ajax();">Test AJAX</button>
   </body>
 </html>
