--- a/src/templates/basic_demo.html
+++ b/src/templates/basic_demo.html
@@ -11,6 +11,6 @@
     <p id="content" style="width: 250px"></p>
     <textarea id="editor"></textarea>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="static/edit_test.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/basic_demo.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
