Ready for merge

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -15,7 +15,7 @@
     <br/>
 
     <h4>Last version</h4>
-    <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
+    <textarea id="editorLastVersion" class="codeInput codeInputDebug"></textarea>
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
