--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,5 +1,11 @@
+
+/* Add spacing between sections */
+tr.ide td:first-child {
+    padding-right: 23px;
+} 
+
 .codeInput {
-	background-color: transparent;
+    background-color: transparent;
     border: 0px;
     outline: none;
     -webkit-box-shadow: none;
@@ -8,26 +14,94 @@
     color:transparent;
     cursor:default;
     width: 0px;
-	height: 0px;
+    height: 0px;
 }
 
 .codeInputDebug {
     width: 100%;
-	height: 300px;
+    height: 300px;
 }
 
 .codeDisplay {
-	border-style: solid;
+    border-style: solid;
     border-width: 1px;
     padding-left: 1px; 
 }
 
 .line {
-	list-style-type: none;
-	padding-left: 0px; 
-	margin-left: 5px; 
+    list-style-type: none;
+    padding-left: 0px; 
+    margin-left: 5px; 
 }
 
 .emptyLine {
-	display:none;
+    display:none;
+}
+
+/*#######################################
+####                                 ####
+####     ProjectTreeView classes     ####
+####                                 ####
+#######################################*/
+
+.tree {
+    min-height:20px;
+    padding:19px;
+    margin-bottom:20px;
+    background-color:#fbfbfb;
+    border:1px solid #999;
+    -webkit-border-radius:4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
+    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+}
+.tree li {
+    list-style-type:none;
+    margin:0;
+    padding:10px 5px 0 5px;
+    position:relative
+}
+.tree li::before, .tree li::after {
+    content:'';
+    left:-20px;
+    position:absolute;
+    right:auto
+}
+.tree li::before {
+    border-left:1px solid #999;
+    bottom:50px;
+    height:100%;
+    top:0;
+    width:1px
+}
+.tree li::after {
+    border-top:1px solid #999;
+    height:20px;
+    top:25px;
+    width:25px
+}
+.tree li span {
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border:1px solid #999;
+    border-radius:5px;
+    display:inline-block;
+    padding:3px 8px;
+    text-decoration:none
+}
+.tree li.parent_li>span {
+    cursor:pointer
+}
+.tree>ul>li::before, .tree>ul>li::after {
+    border:0
+}
+.tree li:last-child::before {
+    height:30px
+}
+.tree li.parent_li>span:hover, .tree li.parent_li>span:hover+ul li span {
+    background:#eee;
+    border:1px solid #94a0b4;
+    color:#000
 }
