--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -3,38 +3,71 @@
     <title>This is replaced.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
   </head>
   <body>
-    <h1>Editing display</h1>
 
-    <!-- Container of all lines -->
-    <h4>Display</h4>
-    <div id="editorWidget">
-      <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
-    </div>
-    <br/>
 
-    <h4>Last version</h4>
-    <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
+
+    <!-- Very basic representation ... for now -->
+    <table>
+      <tbody>
+        <tr class="ide">
+
+          <!-- Project explorer -->
+          <td style="vertical-align:top;">
+
+            <!-- Editing zone impl -->
+            <div id="tree" class="tree well"></div>
+
+            <!-- Editing zone impl -->
+            <div>
+              <h3>Test</h3>
+              <label>add Node</label><input type="text" id="addNode"/>
+              <button onClick="test_AddNode();">Send</button>
+              <button onClick="test_ManyAddNode();">Send Many</button>
+            </div>
+          </td>
+
+          <!-- Editing zone -->
+          <td>
+            <!-- Editing zone impl -->
+            <h1>Editing display</h1>
+            <!-- Container of all lines -->
+            <h4>Display</h4>
+            <div id="editorWidget">
+              <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
+            </div>
+            <h4>Last version</h4>
+            <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
+
+
+            <!-- Tests -->
+            <h3>Test</h3>
+            <label>add</label>
+            <textarea id="addText"></textarea>
+            <br/>
+            <label>at</label>
+            <input type="text" id="addAt"/>
+            <br/>
+            <button onClick="addNewTextAt();">Send</button>
+            <br/>
+            <br/>
+            <button onClick="test_notify();">Test notify</button>
+            <button onClick="test_ajax();">Test AJAX</button>
+
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- JS -->
     <script src="static/js/edit.js" type="text/javascript" charset="utf-8"></script>
-
-
-
-    <h3>Test</h3>
-    <label>add</label>
-    <textarea id="addText"></textarea>
-    <br/>
-    <label>at</label>
-    <input type="text" id="addAt"/>
-    <br/>
-    <button onClick="addNewTextAt();">Send</button>
-    <br/>
-    <br/>
-    <button onClick="test_notify();">Test notify</button>
-    <button onClick="test_ajax();">Test AJAX</button>
+    <!-- Bootstrap JS -->
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>   
   </body>
 </html>
