--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -2,7 +2,9 @@
   <head>
     <title>This is replaced.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+    
+    <!-- CIDE CSS -->
+    <link rel="stylesheet" type="text/css" href="../static/css/style.css" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
@@ -68,8 +70,11 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- JS -->
-    <script src="static/js/edit.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../static/js/edit.js" type="text/javascript" charset="utf-8"></script>
     <!-- Bootstrap JS -->
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>   
+    <!-- Diff match patch JS -->
+    <script src="../static/js/diff_match_patch.js" type="text/javascript" charset="utf-8"></script>
+    
   </body>
 </html>
