--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -28,9 +28,8 @@
             <div>
               <h3>Test</h3>
               <label>add Node</label><input type="text" id="textNode"/>
-              <button onClick="test_AddNode();">Send</button>
-              <button onClick="test_RemoveNode();">Remove</button>
-              <br/>
+              <button onClick="test_AddNode();">Add node</button>
+              <button onClick="test_RemoveNode();">Remove node</button><br/><br/>
               <button onClick="test_ManyAddNode();">Send Many</button>
             </div>
           </td>
@@ -44,7 +43,7 @@
             <div id="editorWidget">
               <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
             </div>
-            <h4>Last version</h4>
+            <h4>Last version from server</h4>
             <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
 
 
