--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -1,6 +1,6 @@
 <html xmlns:py="http://genshi.edgewall.org/">
   <head>
-    <title>This is replaced.</title>
+    <title py:content="title">This is replaced.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     
     <!-- CIDE CSS -->
