--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -1,45 +1,50 @@
+$side-section-border-color: 1px solid #e3e3e3;
+$side-section-background-color: #f5f5f5;
+$side-section-foreground-color: #fff;
+
 
 /* Add spacing between sections */
 tr.ide td:first-child {
-    padding-right: 23px;
+  padding-right: 23px;
 } 
 
 td.side-section {
-    width: 450px;
+  width: 450px;
+  vertical-align: top;
 }
 
 .codeInput {
-    background-color: transparent;
-    border: 0px;
-    outline: none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    color:transparent;
-    cursor:default;
-    width: 0px;
-    height: 0px;
+  background-color: transparent;
+  border: 0px;
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  color:transparent;
+  cursor:default;
+  width: 0px;
+  height: 0px;
 }
 
 .codeInputDebug {
-    width: 100%;
-    height: 50px;
+  width: 100%;
+  height: 50px;
 }
 
 .codeDisplay {
-    border-style: solid;
-    border-width: 1px;
-    padding-left: 1px; 
+  border-style: solid;
+  border-width: 1px;
+  padding-left: 1px; 
 }
 
 .line {
-    list-style-type: none;
-    padding-left: 0px; 
-    margin-left: 5px; 
+  list-style-type: none;
+  padding-left: 0px; 
+  margin-left: 5px; 
 }
 
 .emptyLine {
-    display:none;
+  display:none;
 }
 
 /*#######################################
@@ -49,65 +54,70 @@ td.side-section {
 #######################################*/
 
 .tree {
-    min-height:20px;
-    padding:19px;
-    margin-bottom:20px;
-    background-color:#fbfbfb;
-    border:1px solid #999;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
-    -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-    box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+  min-height:20px;
+  padding:19px;
+  margin-bottom:20px;
+  background-color:#fbfbfb;
+  border:1px solid #999;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+  -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .tree li {
-    list-style-type:none;
-    margin:0;
-    padding:10px 5px 0 5px;
-    position:relative
+  list-style-type:none;
+  margin:0;
+  padding:10px 5px 0 5px;
+  position:relative;
 }
 .tree li::before, .tree li::after {
-    content:'';
-    left:-20px;
-    position:absolute;
-    right:auto
+  content:'';
+  left:-20px;
+  position:absolute;
+  right:auto;
 }
+
+// Vertical line from a parent to its child nodes
 .tree li::before {
-    border-left:1px solid #999;
-    bottom:50px;
-    height:100%;
-    top:0;
-    width:1px
+  border-left:1px solid #999;
+  bottom:50px;
+  height:100%;
+  top:0;
+  width:1px;
 }
+
+// Horizontal lines for each child
 .tree li::after {
-    border-top:1px solid #999;
-    height:20px;
-    top:25px;
-    width:25px
+  border-top:1px solid #999;
+  height:20px;
+  top:25px;
+  width:25px;
 }
 .tree li span {
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
-    border:1px solid #999;
-    border-radius:5px;
-    display:inline-block;
-    padding:3px 8px;
-    text-decoration:none
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px;
+  border:1px solid #999;
+  border-radius:5px;
+  display:inline-block;
+  padding:3px 8px;
+  text-decoration:none;
 }
 .tree li.parent_li>span {
-    cursor:pointer
+  background: $side-section-foreground-color;
+  cursor:pointer;
 }
 .tree>ul>li::before, .tree>ul>li::after {
-    border:0
+  border:0;
 }
 .tree li:last-child::before {
-    height:30px
+  height:30px;
 }
 .tree li.parent_li>span:hover, .tree li.parent_li>span:hover+ul li span {
-    background:#eee;
-    border:1px solid #94a0b4;
-    color:#000
+  background:#eee;
+  border:1px solid #94a0b4;
+  color:#000;
 }
 
 /*##############################################
@@ -116,36 +126,50 @@ td.side-section {
 ####                                        ####
 ##############################################*/
 
-.chat-container, #loginform {
-    margin:0 auto;
-    padding-bottom:25px;
-    background:#f5f5f5;
-    width:504px;
-    border:1px solid #e3e3e3; }
-  
-.chat-logbox {
-    text-align:left;
-    margin:0 auto;
-    margin-bottom:25px;
-    padding:10px;
-    background:#fff;
-    height:270px;
-    width:430px;
-    border:1px solid #ACD8F0;
-    overflow:auto; }
-  
-#usermsg {
-    width:395px;
-    border:1px solid #ACD8F0; }
-  
-#submit { width: 60px; }
-  
-.error { color: #ff0000; }
-  
-#menu { padding:12.5px 25px 12.5px 25px; }
-  
-.chat-header { float:left; }
-  
-.logout { float:right; }
-  
-.msgln { margin:0 0 2px 0; }
+.chat {
+  margin:0 auto;
+  padding-bottom:25px;
+  width:504px;
+
+  border: $side-section-border-color; 
+  background: $side-section-background-color;
+
+  .chat-container-header { 
+    margin: 12.5px 25px 12.5px 25px; 
+  }
+
+  .chat-header { 
+    float:left; 
+  }
+
+  .chat-log-display {
+    height:100%;
+    width:100%;
+    textarea {
+      text-align:left;
+      padding:10px;
+      background: $side-section-foreground-color;
+
+      
+
+      overflow:auto; 
+      resize: none;
+    }
+  }
+
+  .chat-user-msg {
+    textarea {
+      width:300px;
+      resize: none;
+    }
+
+    button {
+      min-height:100%;
+      color: red;
+    }
+  }
+
+  .logout { 
+    float:right; 
+  }
+}
