--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -1,6 +1,7 @@
 $side-section-border-color: 1px solid #e3e3e3;
 $side-section-background-color: #f5f5f5;
 $side-section-foreground-color: #fff;
+$side-section-border-radius: 5px;
 
 
 /* Add spacing between sections */
@@ -11,6 +12,7 @@ tr.ide td:first-child {
 td.side-section {
   width: 450px;
   vertical-align: top;
+  padding-right: 10px;
 }
 
 .codeInput {
@@ -126,50 +128,55 @@ td.side-section {
 ####                                        ####
 ##############################################*/
 
-.chat {
-  margin:0 auto;
-  padding-bottom:25px;
-  width:504px;
+.chat-logbox
+{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  border: $side-section-border-color; 
-  background: $side-section-background-color;
+.chat-logbox li
+{
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px dotted #B3A9A9;
+}
 
-  .chat-container-header { 
-    margin: 12.5px 25px 12.5px 25px; 
-  }
+.chat-logbox .chat-message-element .chat-message-header
+{
+  margin-bottom: 5px;
+}
 
-  .chat-header { 
-    float:left; 
-  }
+.chat-logbox li .chat-message-element p
+{
+  margin: 0;
+  color: #777777;
+}
 
-  .chat-log-display {
-    height:100%;
-    width:100%;
-    textarea {
-      text-align:left;
-      padding:10px;
-      background: $side-section-foreground-color;
+.panel .slidedown .glyphicon, .chat-logbox .glyphicon
+{
+  margin-right: 5px;
+}
 
-      
+.panel-body
+{
+  overflow-y: scroll;
+}
 
-      overflow:auto; 
-      resize: none;
-    }
-  }
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
 
-  .chat-user-msg {
-    textarea {
-      width:300px;
-      resize: none;
-    }
+::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #F5F5F5;
+}
 
-    button {
-      min-height:100%;
-      color: red;
-    }
-  }
-
-  .logout { 
-    float:right; 
-  }
+::-webkit-scrollbar-thumb
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
 }
