--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,7 +2,7 @@
 
 <html xmlns:py="http://genshi.edgewall.org/">
   <head>
-    <title>Login for page ${from_page}</title>
+    <title>Log in</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <!-- CIDE CSS -->
@@ -10,11 +10,6 @@
 
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-
-    <!-- JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </head>
 
   <body>
@@ -22,12 +17,11 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title"><strong>Login for page ${from_page} </strong></h3>
+            <h3 class="panel-title"><strong>Log in </strong></h3>
           </div>
           <div class="panel-body">
             <div py:if="msg" class="alert alert-danger">${msg}</div>
             <form id="login_form" role="form" method="post" action="/identify/login">
-              <input type="hidden" name="from_page" value="${from_page}" />
               <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" name="username" placeholder="Enter username" value="${username}" />
@@ -38,5 +32,10 @@
         </div>
       </div>
     </div>
+
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
