--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -1,19 +1,22 @@
-$side-section-border-color: 1px solid #e3e3e3;
+$side-section-border-color: #e3e3e3;
+$side-section-border: 3px solid $side-section-border-color;
+
+$side-section-header-background-color: #f5f5f5;
+$side-section-header-text-color: black;
+
 $side-section-background-color: #f5f5f5;
 $side-section-foreground-color: #fff;
 $side-section-border-radius: 5px;
 
 
-/* Add spacing between sections */
-tr.ide td:first-child {
-  padding-right: 23px;
-} 
-
-td.side-section {
-  width: 450px;
-  vertical-align: top;
-  padding-right: 10px;
+@mixin mixin-wordwrap () {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap; /* Firefox */    
+  white-space: -pre-wrap;     /* Opera <7 */   
+  white-space: -o-pre-wrap;   /* Opera 7 */    
+  word-wrap: break-word;
 }
+
 
 .codeInput {
   background-color: transparent;
@@ -39,15 +42,6 @@ td.side-section {
   padding-left: 1px; 
 }
 
-.line {
-  list-style-type: none;
-  padding-left: 0px; 
-  margin-left: 5px; 
-}
-
-.emptyLine {
-  display:none;
-}
 
 /*#######################################
 ####                                 ####
@@ -128,40 +122,43 @@ td.side-section {
 ####                                        ####
 ##############################################*/
 
-.chat-logbox
-{
+#chat.panel {
+  border: $side-section-border;
+  margin-bottom: 0px;
+
+  > .panel-heading {
+    color: $side-section-header-text-color;
+    background-color: $side-section-header-background-color;
+    border-color: $side-section-border-color;
+  }
+}
+
+#chat-logbox {
+  
   list-style: none;
   margin: 0;
   padding: 0;
+
+  .panel-body { overflow-y: scroll; }
+  .glyphicon { margin-right: 5px; }
+
+  > li.chat-message-element {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+
+    .chat-message-header { margin-bottom: 5px; }
+    .chat-message-body { @include mixin-wordwrap(); }
+  }
 }
 
-.chat-logbox li
-{
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #B3A9A9;
+.chat-user-text.input-group {
+  > input {
+    height:100%;
+  }
 }
 
-.chat-logbox .chat-message-element .chat-message-header
-{
-  margin-bottom: 5px;
-}
 
-.chat-logbox li .chat-message-element p
-{
-  margin: 0;
-  color: #777777;
-}
-
-.panel .slidedown .glyphicon, .chat-logbox .glyphicon
-{
-  margin-right: 5px;
-}
-
-.panel-body
-{
-  overflow-y: scroll;
-}
 
 ::-webkit-scrollbar-track
 {
