--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -11,115 +11,78 @@
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
   </head>
   <body>
-
-
-
+    
     <!-- Very basic representation ... for now -->
-    <table>
-      <tbody>
-        <tr class="ide">
+    <!-- Editing zone impl -->
+    <div id="tree" class="tree well">  </div>
 
-          <!-- Project explorer -->
-          <td class="side-section">
-
-            <!-- Editing zone impl -->
-            <div id="tree" class="tree well">  </div>
-
-            <!-- Editing zone tests -->
-            <div>
-              <h3>Test</h3>
-              <label>add Node</label><input type="text" id="textNode"/>
-              <button onClick="test_AddNode();">Add node</button>
-              <button onClick="test_RemoveNode();">Remove node</button><br/><br/>
-              <button onClick="test_ManyAddNode();">Send Many</button>
-            </div>
-          </td>
-
-          <!-- Chat section -->
-          <td class="side-section">
-            <div class="panel panel-primary">
-              <div class="panel-heading">
-                  <span class="glyphicon glyphicon-comment"></span>
-                  <span py:content="title"></span>'s Instant Chat
-              </div>
-
-              <div class="panel-body">
-                <ul class="chat-logbox">
-
-                  <li class="left clearfix">
-                    <div class="chat-message-element clearfix">
-                      <div class="chat-message-header">
-                        <strong class="primary-font">Jack Sparrow</strong> <small class="pull-right text-muted"><span class="glyphicon glyphicon-time"></span>12 mins ago</small>
-                      </div>
-                      <p>Message 1</p>
-                    </div>
-                  </li>
-
-                  <li class="right clearfix">
-                    <div class="chat-message-element clearfix">
-                        <div class="chat-message-header">
-                            <small class="text-muted"><span class="glyphicon glyphicon-time"></span>13 mins ago</small>
-                            <strong class="pull-right primary-font">Bhaumik Patel</strong>
-                        </div>
-                        <p>Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2Message 2</p>
-                    </div>
-                  </li>
-                    
-                </ul>
-              </div>
-
-              <div class="panel-footer">
-                  <div class="input-group">
-                      <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..."/>
-                      <span class="input-group-btn">
-                          <button class="btn" id="btn-chat">
-                              Send</button>
-                      </span>
-                  </div>
-              </div>
-            </div>
-          </td>
+    <!-- Editing zone tests -->
+    <div>
+      <h3>Test</h3>
+      <label>add Node</label><input type="text" id="textNode"/>
+      <button onClick="test_AddNode();">Add node</button>
+      <button onClick="test_RemoveNode();">Remove node</button><br/><br/>
+      <button onClick="test_ManyAddNode();">Send Many</button>
+    </div>
 
 
-          <!-- Editing zone -->
-          <td class="side-section" style="width: 50%;">
-            <!-- Editing zone impl -->
-            <h1>Editing display</h1>
-            <!-- Container of all lines -->
-            <h4>Display</h4>
-            <div id="editorWidget">
-              <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
-            </div>
-            <h4>Last version from server</h4>
-            <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
+    <div id="chat" class="panel">
+      <div class="panel-heading">
+          <span class="glyphicon glyphicon-comment"></span>
+          <span py:content="title"></span>'s Instant Chat
+      </div>
+
+      <div class="panel-body">
+        <ul id="chat-logbox"></ul>
+      </div>
+
+      <div class="panel-footer">
+        <div class="chat-user-text input-group">
+          <input id="chat-user-text-input" type="text" class="form-control" placeholder="Type your message here..."/>
+          <span class="input-group-btn">
+            <button id="chat-user-text-btn" class="btn">Send</button>
+          </span>
+        </div>
+      </div>
+    </div>
+ 
 
 
-            <!-- Tests -->
-            <h3>Test</h3>
-            <table>
-              <tbody>
-                <tr>
+    <!-- Editing zone -->
+    <div>
+      <!-- Editing zone impl -->
+      <h1>Editing display</h1>
+      <!-- Container of all lines -->
+      <h4>Display</h4>
+      <div id="editorWidget">
+        <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
+      </div>
+      <h4>Last version from server</h4>
+      <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
 
-                  <td>
-                    <label>add text</label><textarea id="addText"></textarea><br/>
-                    <label>at</label><input type="text" id="addAt"/><br/>
-                    <button onClick="addNewTextAt();">Send</button><br/>
-                  </td>
 
-                  <td>
-                    <label>remove count</label><input type="text" id="rmCountText"/><br/>
-                    <label>at</label><input type="text" id="rmAt"/><br/>
-                    <button onClick="removeTextAt();">Send</button><br/>
-                  </td>
+      <!-- Tests -->
+      <h3>Test</h3>
+      <table>
+        <tbody>
+          <tr>
 
-                </tr>
-              </tbody>
-            </table>
+            <td>
+              <label>add text</label><textarea id="addText"></textarea><br/>
+              <label>at</label><input type="text" id="addAt"/><br/>
+              <button onClick="addNewTextAt();">Send</button><br/>
+            </td>
 
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            <td>
+              <label>remove count</label><input type="text" id="rmCountText"/><br/>
+              <label>at</label><input type="text" id="rmAt"/><br/>
+              <button onClick="removeTextAt();">Send</button><br/>
+            </td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
