Removed old bootstrap(v2) link and bootstrap trees

--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -116,6 +116,10 @@ $side-section-border-radius: 5px;
   color:#000;
 }
 
+.tree-node-name {
+  margin-left:10px;
+}
+
 /*##############################################
 ####                                        ####
 ####     ProjectInstantChatView classes     ####
