--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -8,7 +8,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" />
   </head>
   <body>
     
@@ -89,7 +88,7 @@
     <!-- JS -->
     <script src="static/js/edit.js" type="text/javascript" charset="utf-8"></script>
     <!-- Bootstrap JS -->
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>   
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>   
     <!-- Diff match patch JS -->
     <script src="static/js/diff_match_patch.js" type="text/javascript" charset="utf-8"></script>
     
