--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -122,7 +122,7 @@ $side-section-border-radius: 5px;
 
 /*##############################################
 ####                                        ####
-####     ProjectInstantChatView classes     ####
+####     AppChat classes     ####
 ####                                        ####
 ##############################################*/
 
@@ -162,6 +162,12 @@ $side-section-border-radius: 5px;
   }
 }
 
+
+/*###############################
+###                          ####
+####     Toolkit classes     ####
+####                         ####
+#################################*/
 
 
 ::-webkit-scrollbar-track
