Reactivated html debug

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -85,7 +85,7 @@
  
     <!-- Editing zone tests -->
     <br/><br/><br/><br/><br/><br/>
-    <div style="display:none;">
+    <div style="display:visible;">
       <div>
         <h3>Test</h3>
         <label>add Node</label><input type="text" id="textNode"/>
