--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -23,16 +23,10 @@ $side-section-border-radius: 5px;
 ####                        ####
 ##############################*/
 
-.row.full-row {
-  position: relative;
-  height: 100%;
-  border: 1px solid red;
-  overflow: hidden;
-
-  > [class*="col-"] {
-    position: relative;
-    height: 100%;
-  }
+#tree.full-size,  
+.chat-logbox.full-size {
+    min-height: 75%;
+    max-height: 75%;
 }
 
 
