Minor syntax changes

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -41,7 +41,7 @@
                     <span py:content="title"></span>'s Instant Chat
                 </div>
 
-                <div id="tototo" class="chat-logbox panel-body full-size">
+                <div class="chat-logbox panel-body full-size">
                   <ul id="chat-display"></ul>
                 </div>
 
