--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,15 +5,28 @@
     <title>Log in</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <!-- CIDE CSS -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css" />
-
     <!-- Bootstrap CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+
+    <!-- Login CSS -->
+    <style type="text/css">
+      html, body, .container {
+        height: 100%;
+      }
+      .container {
+        display: table;
+        vertical-align: middle;
+      }
+      .vertical-center-row {
+        display: table-cell;
+        vertical-align: middle;
+      }
+    </style>
   </head>
 
   <body>
     <div class="container">
+      <div class="row vertical-center-row">
       <div class="col-md-6 col-md-offset-3">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -24,13 +37,13 @@
             <form id="login_form" role="form" method="post" action="/identify/login">
               <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" placeholder="Enter username" value="${username}" />
+                <input type="text" class="form-control" name="username" placeholder="Enter username" value="${username}" autofocus=""/>
               </div>
               <button form="login_form" type="submit" class="btn btn-sm btn-success">Log in</button>
             </form>
           </div>
         </div>
-      </div>
+      </div></div>
     </div>
 
     <!-- JQuery -->
@@ -39,3 +52,4 @@
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
+
