Segmented js in to many files for unittests

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -125,10 +125,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- JS -->
     <script src="static/js/edit.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/apps/ide.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/apps/chat.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/modules/treeView.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/modules/localChanges.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/modules/lastVersionZone.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/modules/displayZone.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/modules/requestHandler.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/utils/helper.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/utils/representation.js" type="text/javascript" charset="utf-8"></script>
     <!-- Bootstrap JS -->
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>   
     <!-- Diff match patch JS -->
-    <script src="static/js/diff_match_patch.js" type="text/javascript" charset="utf-8"></script>
+    <script src="static/js/libs/diff_match_patch.js" type="text/javascript" charset="utf-8"></script>
     
   </body>
 </html>
