Fixed line jump detection in display

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -73,11 +73,9 @@
           <h1>Editing display</h1>
           <!-- Container of all lines -->
           <h4>Display</h4>
-          <div id="editorWidget">
-            <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
-          </div>
+          <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
           <h4>Last version from server</h4>
-          <textarea id="editorLastVersion" class="codeInputDebug"></textarea>
+          <pre id="editorLastVersion" class="codeDisplay"></pre>
         </div><!-- ide sections -->
 
       </div><!-- side sections and ide -->
