Encapsulating display zone
Last version value in displayZone dataAttribute was not update
during soft notifications. The refactor made me realize this!

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -71,7 +71,7 @@
         <div class="col-md-9">
           <!-- Editing zone impl -->
           <h1>Editing display</h1>
-          <!-- Container of all lines -->
+          <!-- Container of all lines  contenteditable="true"-->
           <h4>Display</h4>
           <pre id="editorDisplay" class="codeDisplay" contenteditable="true"></pre>
           <h4>Last version from server</h4>
