Removed unecessary comment and code

--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -58,7 +58,7 @@ $side-section-border-radius: 5px;
 .codeDisplay {
   border-style: solid;
   border-width: 1px;
-  white-space: pre-wrap; /* Allows line jump detection */
+  white-space: pre-wrap;
 }
 
 
