Set to editable for uniform display to compare text

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -75,7 +75,7 @@
           <h4>Display</h4>
           <code id="editorDisplay" class="codeDisplay" contenteditable="true"></code>
           <h4>Last version from server</h4>
-          <code id="editorLastVersion" class="codeDisplay"></code>
+          <code id="editorLastVersion" class="codeDisplay" contenteditable="true"></code>
         </div><!-- ide sections -->
 
       </div><!-- side sections and ide -->
