Added state helper message

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -70,7 +70,7 @@
         <!-- IDE sections -->
         <div class="col-md-9">
           <!-- Editing zone impl -->
-          <h1>Editing display</h1>
+          <h1 id="stateHelper"></h1>
           <!-- Container of all lines  contenteditable="true"-->
           <h4>Display</h4>
           <code id="editorDisplay" class="codeDisplay" contenteditable="true"></code>
