--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -43,7 +43,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span> Parameter</a>
             <ul class="dropdown-menu" role="menu">
               <li class="divider"></li>
-              <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+              <li><a href="/identify/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
           </li>
         </ul>
